<resources>
    <string name="app_name">CrashCar</string>
    <string name="tittle_app"><font color="#037F8C">CRASH</font> <font color="#BF5669">CAR</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lblAvisoLegal">He leído y acepto el <font color='#2A3CDF'>Avíso legal y Política de privacidad</font></string>
    <string name="lblNotItemPartes">No hay Partes registrados\nen este momento</string>
    <string name="lblNotItemSeguros">No hay Seguros registrados\nen este momento</string>
    <string name="lblNotItemVehiculos">No hay Vehiculos registrados\nen este momento</string>
    <string name="registerCar">Vehículos registrados: %s</string>
    <string name="registerSeguros">Seguros registrados: %s</string>
    <string name="registerPartes">Partes registrados: %s</string>
    <string name="todo">TODO</string>
    <string name="affirmationResponse">Sí</string>
    <string name="affirmationResponse_2">Vale</string>
    <string name="negationResponse">No</string>
    <string name="queryChangePassword">¿Seguro que desea cambiar la contraseña?</string>
    <string name="err_1_passwordChange">Debe de rellenar todos los campos</string>
    <string name="err_2_passwordChange">La contraseña actual no coincide</string>
    <string name="err_3_passwordChange">La nueva contraseña no coincide</string>
    <string name="msg_dni_register">El DNI no es válido</string>
    <string name="msg_nombre_register">Debe de rellenar el campo Nombre</string>
    <string name="msg_apellidos_register">Debe de rellenar el campo Apellidos</string>
    <string name="msg_pass1_register">La contraseña debe tener como mínimo 8 caracteres</string>
    <string name="msg_pass2_register">La contraseñas no coinciden</string>
    <string name="msg_calle_register">Debe de rellenar el campo Dirección</string>
    <string name="msg_localidad_register">Debe de rellenar el campo Localidad</string>
    <string name="msg_cp_register">El Código Postal no es válido</string>
    <string name="msg_pais_register">Debe de rellenar el campo País</string>
    <string name="msg_phone_register">El Teléfono no es válido</string>
    <string name="msg_email_register">El E-MAIL no es válido</string>
    <string name="query_close_session">¿Seguro que quiere cerrar sesión?</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="cancel_label">Cancelar</string>
    <string name="query_change_data_user">¿Seguro que desea modificar los datos?</string>
    <string name="lbl_aseguradora">%s</string>
    <string name="lbl_num_poliza">Nº Póliza:\n  %s</string>
    <string name="lbl_phone_item">  Teléfono: %s</string>
    <string name="query_delete_seguro">¿Desea eliminar este seguro?</string>
    <string name="query_delete_image">¿Desea eliminar esta imagen?</string>
    <string name="query_delete_parte">¿Desea eliminar este parte?</string>
    <string name="query_delete_conductor">¿Desea eliminar este conductor?</string>
    <string name="query_delete_vehiculo_seguro">¿Desea eliminar este conductor?</string>
    <string name="lblNRegistro">Nº Registro: %s</string>
    <string name="lblNombre">%s</string>
    <string name="lblDireccion">Dirección: %s</string>
    <string name="lblPais">País: %s</string>
    <string name="lblEmail">E-mail: %s</string>
    <string name="lblNombreAseguradora">Nombre aseguradora: %s</string>
    <string name="lblNombreAgencia">Nombre agencia: %s</string>
    <string name="lbl_dni_item">DNI: %s</string>
    <string name="lblNombreApellidos">%s %s</string>
    <string name="lblRegistrarSeguro">REGISTRAR SEGURO</string>
    <string name="lblRegistrarVehiculo">REGISTRAR VEHICULO</string>
    <string name="error_conductor_size_list">Debe de haber un conductor como mínimo</string>
    <string name="lblRegistrarConductor">REGISTRAR CONDUCTOR</string>
    <string name="lbl_matricula">Matrícula: %s</string>
    <string name="query_delete_vehiculo_usuario">¿Desea eliminar este vehículo?</string>
    <string name="seguro">Seguro</string>
    <string name="lblNotContainsAllCamp">Debe de rellenar todos los campos</string>
    <string name="lblEditandoSeguro">EDITANDO SEGURO</string>
    <string name="lblEditandoConductor">EDITANDO CONDUCTOR</string>
    <string name="lblEditandoVehiculo">EDITANDO VEHÍCULO</string>
    <string name="lblRegistrarVehiculoSeguro">REGISTRAR VEHÍCULO EN SEGURO</string>
    <string name="lblEditandoVehiculoSeguro">EDITANDO VEHICULO SEGURO</string>
    <string name="err_not_vehicle_seguro">Debe de tener el número de póliza y un vehículo seleccionado</string>
    <string name="lblNumeroParte">Nº Parte: %s</string>
    <string name="lblFechaParte">Fecha: %s</string>
    <string name="lblDireccionTestigoItem">  Dirección: %s</string>
    <string name="error_connection">No es posible conectar con los servicios de CrashCar en este momento, inténtelo de nuevo más tarde</string>
    <string name="lblSelectSeguro">SELECCIONA EL SEGURO</string>
    <string name="lblSelectVehiculoSeguro">SELECCIONA EL VEHÍCULO</string>
    <string name="lblSelectConductor">SELECCIONA AL CONDUCTOR</string>
    <string name="verifyMyDataInjected">Los datos han sido importados con éxito</string>
    <string name="firmar">FIRMA %s</string>
    <string name="lbl_horaParte">Hora: %s</string>
    <string name="lbl_direccion">Dirección: %s</string>
    <string name="lbl_firma">Firma Vehiculo %s</string>
</resources>