<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_card_testigo"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10sp"
    android:layout_margin="15sp"
    app:cardBackgroundColor="@color/color_item"
    app:cardElevation="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textNameTestigoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_aseguradora"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginEnd="50sp"/>

            <TextView
                android:id="@+id/textDireccionTestigoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDireccionTestigoItem"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textPhoneTestigoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/lbl_phone_item"/>

        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="15sp">

        <ImageButton
            android:id="@+id/btnDeleteTestigoItem"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:elevation="10sp"
            android:src="@drawable/ic_delete_item"
            android:background="@null"/>

    </FrameLayout>

</androidx.cardview.widget.CardView>