<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_card_conductor"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10sp"
    android:layout_margin="10dp"
    android:layout_marginBottom="10sp"
    app:cardBackgroundColor="@color/color_item"
    app:cardElevation="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNameDriverItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblNombre"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11sp"/>
            <TextView
                android:id="@+id/textDNIDriverItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/lbl_dni_item"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="11sp"/>

            <TextView
                android:id="@+id/textPhoneDriverItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/lbl_phone_item"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnDeleteConductorItem"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:elevation="10sp"
                android:layout_gravity="end|top"
                android:src="@drawable/ic_delete_item"
                android:background="@null"/>

        </FrameLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>